# naivecompiler

./: .gitignore  README.md  Structure.py  analysis_handler.py  ast.py  ast_rewrite.py  build.sh  c_ast.py  c_parser.py  cfgbuilder.py  clean.sh  codegen.py  compiler.py  interface.py  irgen.py  link.sh  parser.py  serialize_handler.py  serialize_structure.py  symbol_table.py  test.ns  test.sh  test5  visitor.py
Docker/: Dockerfile  sources.list
backend/: CMakeLists.txt  Compiler.cc  Compiler.h  NaiveScript.h  Util.cc  Util.h  test.cc
backend/ast/: AST.cc  AST.h  ASTNode.cc  ASTNode.h  ArgumentList.cc  ArgumentList.h  Assignment.h  AssignmentNode.cc  AssignmentNode.h  BinaryOpNode.cc  BinaryOpNode.h  CodeBlock.cc  CodeBlock.h  Declaration.cc  Declaration.h  DeclarationList.cc  DeclarationList.h  Expr.h  FuncCallNode.cc  FuncCallNode.h  FuncDeclNode.cc  FuncDeclNode.h  FuncDefNode.cc  FuncDefNode.h  Function.cc  Function.h  FunctionList.cc  FunctionList.h  FunctionNode.cc  FunctionNode.h  IfNode.cc  IfNode.h  NodeFactory.cc  NodeFactory.h  NodeVisitor.cc  NodeVisitor.h  ReturnNode.cc  ReturnNode.h  Statement.cc  Statement.h  (+8 more)
backend/codegen/: CodeGen.cc  CodeGen.h
backend/log/: Logging.cpp  Logging.h  testlog.cpp
backend/serialize/: SerializeFile.cc  SerializeFile.h  SerializeStructure.h  SymbolTable.cc  SymbolTable.h  structure.hpp
backend/test/: CMakeLists.txt  test.cc
tests/: cfg.fuck.dot  cfg.main.dot  dump_ast.sh  dump_bytecode.sh  dump_cfg.sh  putint.c  pycfg.py  run.py  test.c  test.ll  test.py  test1.ns  test10.c  test2.ns  test3.c  test3.ns  testarray.c  testbinaryop.c  testbreak.c  testchar.c  testextern.c  testfloat.c  testhello.c  testif.c  testnestedif.c  testnestedwhile.c  testoutput1  testpointer.c  testsimplebody.c  testsimplebody2.c  teststring.c  testwhile.c  testwhile2.c
